--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,4 +12,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Demo/Untitled.Untitled
+EditorStartupMap=/Game/Demo/Untitled.Untitled
 
